--- a/grocery_app/templates/store_detail.html
+++ b/grocery_app/templates/store_detail.html
@@ -20,17 +20,29 @@
 
 <h2>Edit Store</h2>
 
-<form>
+<form> <!--Add information in form later-->
+    {{ form.csrf_token }}
     <fieldset>
-        <legend>Please enter your information:</legend>
+        <legend>Edit this store:</legend>
+        <ul>
+            {% for error in form.title.errors %}
+            <li class="error">{{ error }}</li>
+            {% endfor %}
+            {% for error in form.address.errors %}
+            <li class="error">{{ error }}</li>
+            {% endfor %}
+        </ul>
 
+        {{ form.title.label }}
+        {{ form.title }}
+
+        {{ form.address.label }}
+        {{ form.address }}
 
 
         <!-- TODO: Remove the next paragraph and use the `form` object passed in 
             from the route to render a form. -->
-        <p><em>Form fields go here!</em></p>
-
-        <input type="submit" value="Submit">
+        {{ form.submit }}
     </fieldset>
 </form>
 
