--- a/grocery_app/templates/store_detail.html
+++ b/grocery_app/templates/store_detail.html
@@ -20,18 +20,18 @@
 
 <h2>Edit Store</h2>
 
-<form> <!--Add information in form later-->
+<form method="POST" action="{{ url_for('main.store_detail', store_id=store.id) }}">
     {{ form.csrf_token }}
     <fieldset>
         <legend>Edit this store:</legend>
-        <ul>
+        <!-- <ul>
             {% for error in form.title.errors %}
             <li class="error">{{ error }}</li>
             {% endfor %}
             {% for error in form.address.errors %}
             <li class="error">{{ error }}</li>
             {% endfor %}
-        </ul>
+        </ul> -->
 
         {{ form.title.label }}
         {{ form.title }}
@@ -39,9 +39,6 @@
         {{ form.address.label }}
         {{ form.address }}
 
-
-        <!-- TODO: Remove the next paragraph and use the `form` object passed in 
-            from the route to render a form. -->
         {{ form.submit }}
     </fieldset>
 </form>
