--- a/grocery_app/templates/store_detail.html
+++ b/grocery_app/templates/store_detail.html
@@ -23,7 +23,7 @@
 <form method="POST" action="{{ url_for('main.store_detail', store_id=store.id) }}">
     {{ form.csrf_token }}
     <fieldset>
-        <legend>Edit this store:</legend>
+        <!-- <legend>Edit this store:</legend> -->
         <!-- <ul>
             {% for error in form.title.errors %}
             <li class="error">{{ error }}</li>
