--- a/grocery_app/templates/new_item.html
+++ b/grocery_app/templates/new_item.html
@@ -6,7 +6,7 @@
 <form method="POST" action="{{ url_for('main.new_item') }}">
     {{ form.csrf_token }}
     <fieldset>
-        <legend>Please enter your information:</legend>
+        <!-- <legend>Please enter your information:</legend> -->
 
         {{ form.name.label }}
         {{ form.name }}
